# muz-bot

./: .gitignore  README.md  bot.py  buaa-by.py  cf_plugin.py  duaa_core.py  duaa_daemon.py  duaa_plugin.py  imagegen_plugin.py  katex_renderer.py  latex_plugin.py  menu.py  pjsk_plugin.py  pjsk_utils.py  pyproject.toml  signin.py  test_boya.py  test_fcntl.py
data/imagegen/: config.example.json
data/pjsk/: characters.json
